# Extremo_chatbot

./: .dockerignore  .env.example  AWS_instructions.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  prompt-v2.md  prompt.md  pyproject.toml
.github/workflows/: deploy.yml
agent/: __init__.py  graph.py  prompts.py  state.py
agent/tools/: __init__.py  email_drafter.py  google_maps.py
infra/: cloudformation-ec2.yaml  cloudformation.yaml  deploy-ec2.sh  deploy.sh
scripts/: ec2-setup.sh
ui/: Dockerfile
ui/src/app/: page.tsx
ui/src/components/thread/history/: index.tsx
ui/src/lib/: agent-inbox-interrupt.ts  api-key.ts  app-config.ts  ensure-tool-responses.ts  multimodal-utils.ts
ui/src/providers/: Auth.tsx  Stream.tsx  Thread.tsx
